infra/gke/manifests/coturn/coturn-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coturn
spec:
  selector:
    matchLabels:
      app: coturn
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: coturn
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 10
      hostNetwork: true
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - coturn
            topologyKey: "kubernetes.io/hostname"
      containers:
        ###
        # coturn container
        ###
        - name: coturn
          image: ghcr.io/selkies-project/selkies-gstreamer/coturn:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 1000m
              memory: 265Mi
            limits:
              cpu: 2000m
              memory: 1Gi
