infra/gke/manifests/coturn/coturn-web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coturn-web
  labels:
    app: coturn-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coturn-web
  template:
    metadata:
      labels:
        app: coturn-web
    spec:
      serviceAccount: coturn-web
      terminationGracePeriodSeconds: 10
      containers:
        ###
        # HTTP api for serving json RTC configs.
        ###
        - name: coturn-web
          image: ghcr.io/selkies-project/selkies-gstreamer/coturn-web:latest
          imagePullPolicy: Always
          readinessProbe:
            tcpSocket:
              port: 8080
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
