infra/gke/manifests/coturn/coturn-discovery-service.yaml
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

# Headless and selector-less service.
# Endpoints are added dynamically by the coturn-web container.
# This allows other in-cluster services to discover the TURN external IPs using a DNS SRV query.
apiVersion: v1
kind: Service
metadata:
  name: coturn-discovery
spec:
  clusterIP: None
  type: ClusterIP
  ports:
    - name: turn
      port: 3478
      protocol: UDP
      targetPort: 3478
  selector: {}
