infra/gke/manifests/coturn/coturn-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coturn-lb-tcp
  namespace: coturn
spec:
  type: LoadBalancer
  loadBalancerIP: ${LB_IP}
  sessionAffinity: ClientIP
  externalTrafficPolicy: Local
  selector:
    app: coturn
  ports:
    - name: turn-tcp
      protocol: TCP
      port: 80
    - name: turn-tcp-alt
      protocol: TCP
      port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: coturn-lb-udp
  namespace: coturn
spec:
  type: LoadBalancer
  loadBalancerIP: ${LB_IP}
  externalTrafficPolicy: Local
  selector:
    app: coturn
  ports:
    - name: turn-udp
      protocol: UDP
      port: 80
    - name: turn-udp-alt
      protocol: UDP
      port: 443
    - name: turn0-udp
      protocol: UDP
      port: 25000
    - name: turn1-udp
      protocol: UDP
      port: 25001
    - name: turn2-udp
      protocol: UDP
      port: 25002
    - name: turn3-udp
      protocol: UDP
      port: 25003
    - name: turn4-udp
      protocol: UDP
      port: 25004
    - name: turn5-udp
      protocol: UDP
      port: 25100
