infra/gke/manifests/coturn/coturn-web-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coturn-web
spec:
  hosts:
    - "*"
  gateways:
    - coturn
  http:
    - match:
        - uri:
            prefix: /turn/
      route:
        - destination:
            host: coturn-web
            port:
              number: 8080
